# lidar-obstacle-detection

./: .clang-format  .clangd  CMakeLists.txt  LICENSE  README.md  package.xml
include/lidar_obstacle_detection/: cloud_geometry.hpp  common.hpp  lidar_obstacle_detection.hpp
launch/: obstacle_detection.launch
rviz/: obstacle_visualization.rviz
src/lidar_obstacle_detection/: cloud_geometry.cpp  lidar_obstacle_detection.cpp  lidar_obstacle_detection_node.cpp
